# C.E.R.C.I.

./: .gitignore  CMakeLists.txt  README.md  buildEngine.sh  buildTest.sh  chess  cmakeSetup.sh  requirements.txt
ML/: Dense.ipynb  GenerateTrainingData.ipynb  MCTS.ipynb
ML/training/: PrepareTrainingData.ipynb
ML/training_Positional/: PrepareTrainingData.ipynb
build-test/: CERCI-ChessEngine  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/src/BoardRepresentation/: Makefile  cmake_install.cmake
build-test/src/Eval/: Makefile  cmake_install.cmake
build-test/src/MoveGenerator/: Makefile  cmake_install.cmake
build-test/src/TranspositionTabels/: Makefile  cmake_install.cmake
build-test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: UCI.cpp  UCI.h  main copy.cpp  main.cpp  main1.cpp  main2.cpp  main_bot_vs_bot.cpp
src/BoardRepresentation/: BoardUtils.h  CMakeLists.txt  FENParcer.cpp  FENParcer.h  ZobristHash.cpp  ZobristHash.h
src/Debuging/: Debug.cpp  Debug.h
src/Eval/: ActivityTableEditor.ipynb  CMakeLists.txt  DNN.cpp  DNN.h  Eval.cpp  Eval.h  EvalLookup.cpp  MCTS.cpp  MCTS.h  TableGen.ipynb  TableVisualization.ipynb
src/MoveGenerator/: BitboardsUtils.h  BoardState.cpp  BoardState.h  BoardStateConditions.cpp  BoardStateMoves.cpp  CMakeLists.txt  FENParcer.cpp  FENParcer.h  MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorBBs.cpp  MoveGeneratorLegals.cpp  Perft.cpp  Perft.h
src/MoveGenerator/GeneratMagicBitboards/: MagicBitboardsGenerator.ipynb
src/MoveGenerator/MagicBitboards/: BishopMagicBitboards.h  MagicBitboardsGenerator.ipynb
src/TranspositionTabels/: CMakeLists.txt  MoveGenTT.cpp  MoveGenTT.h  TT.cpp  TT.h  config.h
tests/: CMakeLists.txt  PerftTestCase.h  TestSet.ipynb  TestUtils.h  TestUtils.py  main.cpp  tests.cpp
tests/.results/: CERCI-AgerssiveDNNv1-Endings.txt  CERCI-AgerssiveDNNv1-Improvement.txt  CERCI-Agresive-Endings.txt  CERCI-Agresive-Improvement.txt  CERCI-AgresiveMCTS-EvalSpeed.txt  CERCI-Agressive-EvalSpeed.txt  CERCI-Agressive-MCTS-Endings.txt  CERCI-Agressive-MCTS-Improvement.txt  CERCI-AgressiveDNN-V2-Perft.txt  CERCI-AgressiveDNNv1.1-Endings.txt  CERCI-AgressiveDNNv1.1-Improvement.txt  CERCI-AgressiveDNNv2-Improvement.txt  CERCI-AgressiveDNNv2.1-Improvement.txt  CERCI-AgressiveMCTSv2-Endings.txt  CERCI-AgressiveMCTSv3-Endings.txt  CERCI-AgressiveMCTSv3-Improvement.txt  CERCI-AgressiveMCTSv3.1-Endings.txt  CERCI-AgressiveMCTSv3.1-Improvement.txt  CERCI-AgressiveMCTSv4-Endings.txt  CERCI-AgressiveMCTSv4-Improvement.txt  CERCI-AgressiveMCTSv5-Improvement.txt  CERCI-AgressiveMCTSv5.2-Improvement.txt  CERCI-Baseline-Endings.txt  CERCI-Baseline-EvalFix-Endings.txt  CERCI-Baseline-EvalFix-v2-Endings.txt  CERCI-Baseline-EvalFix-v2-Improvement.txt  CERCI-Baseline-EvalSpeed.txt  CERCI-Baseline-Improvement.txt  CERCI-Baseline-Perft.txt  CERCI-MCTS2-Improvement.txt  CERCI-MCTS5-Endings.txt  CERCI-MCTS5-Improvement.txt  CERCI-Positional-Endings.txt  CERCI-Positional-EvalSpeed.txt  CERCI-Positional-Improvement.txt  CERCI-PositionalDNN-Improvement.txt  CERCI-PositionalMCTS-EvalSpeed.txt  CERCI-PositionalMCTS-Improvement.txt  Wyniki_xorshift64.txt
tests/Eval/: EndgameTest.py  EvaluationSpeed.py  ImprovementTest.py  ParseLichessDB.ipynb  SpeedTest.py  filtered_positions.txt
tests/MoveGenerator/: MoveGeneratorTests.cpp  PerftTests.cpp  PerftTests.h  Perftest.py
tests/ZobrisstHash/: zHashCalculationTests.cpp  zHashCalculationTests.h
tests/ZobristHash/: zHashCalculationTests.cpp  zHashCalculationTests.h
